# parcs_stt_tts

./: README.md  requirements.txt
parcs_stt/: CMakeLists.txt  package.xml  setup.cfg  setup.py
parcs_stt/action/: Listen.action
parcs_stt/launch/: parcs_stt.launch.py  stt_tester.launch.py
parcs_stt/parcs_stt/: parcs_stt.py  stt_tester.py
parcs_stt_tts_msgs/: CMakeLists.txt  package.xml
parcs_stt_tts_msgs/action/: Recalibrate.action  StopTTS.action  TTS.action
parcs_stt_tts_msgs/srv/: Stop.srv
parcs_tts/: package.xml  setup.cfg  setup.py
parcs_tts/launch/: parcs_tts.launch.py
parcs_tts/parcs_tts/: parcs_tts.py  parcs_tts_test.py  tts_tester.py
